--- a/JavaWebJSPBase/.settings/org.eclipse.wst.common.component
+++ b/JavaWebJSPBase/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JavaWebJSPBase">
+    <wb-module deploy-name="PW2-JSP">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="JavaWebJSPBase"/>
-        <property name="java-output-path" value="/JavaWebJSPBase/build/classes"/>
+        <property name="java-output-path" value="/PW2-JSP/build/classes"/>
+        <property name="context-root" value="PW2-JSP"/>
     </wb-module>
 </project-modules>
