--- a/JavaWebServlet/.settings/org.eclipse.wst.common.component
+++ b/JavaWebServlet/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JavaWebServlet">
+    <wb-module deploy-name="PW2-Servlet">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="JavaWebServlet"/>
-        <property name="java-output-path" value="/JavaWebServlet/build/classes"/>
+        <property name="java-output-path" value="/PW2-Servlet/build/classes"/>
+        <property name="context-root" value="PW2-Servlet"/>
     </wb-module>
 </project-modules>
